# libtray-sys

./: .projectile  Cargo.toml  build.rs
src/: bindings.rs  tray.h
